cmake_minimum_required(VERSION 3.8)
project(rviz_color_code)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(visualization_msgs REQUIRED)

include_directories(
  include
)

add_executable(color_code src/rviz_color_code.cpp)
ament_target_dependencies(color_code rclcpp visualization_msgs)

install(TARGETS
  color_code
  DESTINATION lib/${PROJECT_NAME}
)
install(DIRECTORY launch rviz
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
